# easyWebRust

./: .env  .gitignore  Cargo.toml  README.md  config.yaml
derive/: Cargo.toml
derive/src/: lib.rs
easy_web/: .env  .env.development  .env.production  package-lock.json  package.json  uno.config.js
easy_web/src/: App.vue  main.js
easy_web/src/api/: index.js
easy_web/src/components/common/: TheFooter.vue
easy_web/src/components/me/crud/: index.vue
easy_web/src/components/me/modal/: index.vue
easy_web/src/directives/: index.js
easy_web/src/layouts/components/: SideLogo.vue  UserAvatar.vue
easy_web/src/layouts/full/header/: index.vue
easy_web/src/layouts/normal/header/: index.vue
easy_web/src/router/: basic-routes.js  index.js  permission-routes.js
easy_web/src/router/guards/: page-title-guard.js  permission-guard.js  tab-guard.js
easy_web/src/store/: helper.js
easy_web/src/store/modules/: auth.js  permission.js  user.js
easy_web/src/utils/http/: helpers.js  interceptors.js
easy_web/src/views/baobiao/: index.vue
easy_web/src/views/daka/: index.vue
easy_web/src/views/front-end/: index.vue
easy_web/src/views/goods/goods_info/: api.js  goodsInfoEdit.vue  index.vue
easy_web/src/views/home/: api.js  index.vue
easy_web/src/views/kaoq/: index.vue  index2.vue
easy_web/src/views/login/: api.js  index.vue
easy_web/src/views/material/material_color/: api.js  index.vue
easy_web/src/views/material/material_type/: api.js  index.vue
easy_web/src/views/pms/black-list/: api.js  index.vue
easy_web/src/views/pms/log/: api.js  index.vue
easy_web/src/views/pms/permission/: api.js  index.vue
easy_web/src/views/pms/role/: api.js  index.vue
easy_web/src/views/pms/user/: api.js  index.vue
easy_web/src/views/profile/: api.js  index.vue
easy_web/src/views/xingzi/: index.vue  index2.vue  index3.vue
easy_web/src/views/xingzicheck/: index.vue
sql/: agent_info.sql  black_list.sql  black_list_config.sql  goods_category.sql  goods_details.sql  goods_info.sql  goods_tag.sql  material_color.sql  material_type.sql  material_type_color.sql  merchant_info.sql  order_info.sql  reqeust_log.sql  request_log.sql  salary_items.sql  salary_payment_record.sql  salary_payment_record_detail.sql  sys_department.sql  sys_district.sql  sys_file.sql  sys_log.sql  sys_permission.sql  sys_permission_role.sql  sys_role.sql  sys_user.sql  sys_user_role.sql
src/: main.rs
src/api/: agent_info_api.rs  black_list_api.rs  file_api.rs  log_api.rs  login_api.rs  merchant_info_api.rs  mod.rs  permission_api.rs  role_api.rs  user_api.rs
src/api/admin/: black_list_api.rs  log_api.rs  login_api.rs  mod.rs  permission_api.rs  role_api.rs  user_api.rs
src/api/common/: file_api.rs  mod.rs  sys_district_api.rs
src/api/front_end/: login.rs  mod.rs  sse_api.rs
src/auth/: auth_check.rs  mod.rs
src/config/: config.rs
src/middleware/: blacklist.rs  log.rs  mod.rs
src/model/: agent_info.rs  black_list.rs  black_list_config.rs  goods_info.rs  log.rs  material_color.rs  material_type.rs  merchant_info.rs  mod.rs  permission.rs  request_log.rs  result.rs  role.rs  sys_district.rs  sys_file.rs  user.rs
src/service/: agent_info_service.rs  black_list_service.rs  log_server.rs  login_service.rs  merchant_info_service.rs  mod.rs  permission_service.rs  report_service.rs  role_service.rs  sys_district_service.rs  user_service.rs
src/task/: black_list_task.rs  mod.rs  request_log_task.rs  scheduler.rs  sms_task.rs
src/utils/: captcha.rs  db.rs  log.rs  mini_redis.rs  mod.rs  serialize.rs  sse.rs  vec.rs
src/validate/: mod.rs
