[package]
name = "easyWebRust"
version = "0.1.0"
edition = "2021"

[features]
ali_sms = []

[dependencies]
#salvo = { version= "0.76.0",features=["cors","quinn","size-limiter"]  }
salvo = { version= "0.76.0",features=["cors","size-limiter","sse"]  }
tokio = { version = "1.42.0", features = ["macros"] }

# 日志
tracing = "0.1.41"
tracing-subscriber={version = "0.3",features = ["env-filter",'chrono']}
tracing-appender="0.2.3"

# 序列化
serde = { version = "1.0.203", features = ["derive"] }
serde_json ={version =  "1.0.132"}
serde_yaml = "0.9.33"
# 验证器
validator = { git = "https://github.com/huiyang233/validator_async.git",features = ["derive"] }

backtrace = {version = "0.3.74"}

#微信支付
#wechat-pay-rust-sdk = {version = "0.2.18"}

# 全局变量
lazy_static = "1.4.0"

# 时间类
chrono ={version = "0.4.38",features = ["serde"]}

#Redis
redis = { version = "0.27.6", features = ["tokio-comp","json"] }
deadpool-redis = "0.18.0"
# 数据库
sqlx = {version = "0.8.2",features = ["runtime-tokio" ,"postgres","bigdecimal","chrono"]}
bigdecimal ={version = "0.4.7",features = ["serde"]}

# 加密解密
rust-crypto = {version = "0.2.36"}

derive ={path = "derive"}
# 验证码的依赖
base64 = "0.21.5"
image = "0.24.9"
rand = "0.8.5"
imageproc = "0.23.0"
rusttype = "0.9.2"
# 图片压缩
rimage = "0.10.3"

# id生成
idgen ="0.1.2"

# 异步操作需要用到的工具类
#futures = "0.3.30"

# 定时任务
tokio-cron-scheduler={version = "0.13.0"}
uuid = { version = "1.11.0", features = ["v4"] }

# http请求
reqwest = {version = "0.12.12",default-features = false,features = ["json","rustls-tls"]}
urlencoding = "2.1.3"
tokio-stream = "0.1.16"
futures-util = "0.3.31"
pin-project = "1.1.8"
salvo_core = "0.76.0"
serde_repr = {version = "0.1.19"}

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
# 优化编译后的大小
opt-level = 's'
overflow-checks = false
